--- a/FinalProject/app/src/main/res/values/strings.xml
+++ b/FinalProject/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="stats_stopworkout">STOP WORKOUT</string>
+    <string name="stats_startworkout">START WORKOUT</string>
+    <string name="stats_durationText">00:00</string>
+    <string name="stats_distanceText">0.0</string>
+    <string name="stats_distanceLbl">DISTANCE (KM)</string>
+    <string name="stats_durationLbl">DURATION</string>
 </resources>
