finished the xml read write

--- a/FinalProject/app/src/main/res/values/strings.xml
+++ b/FinalProject/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="checkGPS_title">We need your location</string>
     <string name="checkGPS_desc">In order to track your bike activity</string>
     <string name="checkGPS_btn">Enable GPS</string>
+    <string name="LocationErrorTag">LocationRecord_err</string>
 </resources>
