--- a/FinalProject/app/src/main/res/values/strings.xml
+++ b/FinalProject/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Final Project</string>
+    <string name="app_name">A00962243_Final Project</string>
     <string name="title_activity_maps">Map</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
